src/test/deca/syntax/invalid/synt/ifthenmissingcond.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    mismatched input ')' expecting {'new', 'null', 'this', 'true', 'false', 
//                                  'readInt', 'readFloat', '-', '(', '!', INT, 
//                                   FLOAT, STRING, IDENT}
//
// Historique:
//    cree le 01/01/2022

{
    if(){
        print("Hello ");
    }
    println("world!");
}

